[package]
name = "ch32v103-hal"
version = "0.0.4"
authors = ["kznr <clyde0203hy@outlook.com>"]
description = "WCH CH32v103 MCU HAL"
edition = "2021"
categories = [
    "embedded",
    "no-std",
    "ch32",
    "embedded-hal"
]
license = "MIT"
exclude = ["gitignore"]
repository = "https://github.com/kznr02/ch32v103-hal"
readme = "README.md"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ch32v1 = { version = "0.1.6", features = ["critical-section", "ch32v103"] }
embedded-hal = { version = "1.0.0", features = ["unproven"] }
riscv = { version = "0.10.1" }
paste = { version = "1.0.14" }
nb = { version = "1.1.0"}